library/src/libqgraphicsitem.h

typedef struct QGraphicsEllipseItem QGraphicsEllipseItem;
typedef struct QGraphicsItem QGraphicsItem;
typedef struct QGraphicsLineItem QGraphicsLineItem;
typedef struct QGraphicsPixmapItem QGraphicsPixmapItem;
typedef struct QGraphicsPolygonItem QGraphicsPolygonItem;
typedef struct QLineF QLineF;
typedef struct QPainter QPainter;
typedef struct QPainterPath QPainterPath;
typedef struct QPen QPen;
typedef struct QPixmap QPixmap;
typedef struct QPointF QPointF;
typedef struct QRectF QRectF;
typedef struct QStyleOptionGraphicsItem QStyleOptionGraphicsItem;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
QGraphicsEllipseItem* QGraphicsEllipseItem_new();
QGraphicsEllipseItem* QGraphicsEllipseItem_new2(QRectF* rect);
QGraphicsEllipseItem* QGraphicsEllipseItem_new3(double x, double y, double w, double h);
QGraphicsEllipseItem* QGraphicsEllipseItem_new4(QGraphicsItem* parent);
QGraphicsEllipseItem* QGraphicsEllipseItem_new5(QRectF* rect, QGraphicsItem* parent);
QGraphicsEllipseItem* QGraphicsEllipseItem_new6(double x, double y, double w, double h, QGraphicsItem* parent);
QRectF* QGraphicsEllipseItem_Rect(const QGraphicsEllipseItem* self);
void QGraphicsEllipseItem_SetRect(QGraphicsEllipseItem* self, QRectF* rect);
void QGraphicsEllipseItem_SetRect2(QGraphicsEllipseItem* self, double x, double y, double w, double h);
int QGraphicsEllipseItem_StartAngle(const QGraphicsEllipseItem* self);
void QGraphicsEllipseItem_SetStartAngle(QGraphicsEllipseItem* self, int angle);
int QGraphicsEllipseItem_SpanAngle(const QGraphicsEllipseItem* self);
void QGraphicsEllipseItem_SetSpanAngle(QGraphicsEllipseItem* self, int angle);
QRectF* QGraphicsEllipseItem_BoundingRect(const QGraphicsEllipseItem* self);
QPainterPath* QGraphicsEllipseItem_Shape(const QGraphicsEllipseItem* self);
bool QGraphicsEllipseItem_Contains(const QGraphicsEllipseItem* self, QPointF* point);
void QGraphicsEllipseItem_Paint(QGraphicsEllipseItem* self, QPainter* painter, QStyleOptionGraphicsItem* option, QWidget* widget);
bool QGraphicsEllipseItem_IsObscuredBy(const QGraphicsEllipseItem* self, QGraphicsItem* item);
QPainterPath* QGraphicsEllipseItem_OpaqueArea(const QGraphicsEllipseItem* self);
int QGraphicsEllipseItem_Type(const QGraphicsEllipseItem* self);
bool QGraphicsEllipseItem_SupportsExtension(const QGraphicsEllipseItem* self, int extension);
void QGraphicsEllipseItem_SetExtension(QGraphicsEllipseItem* self, int extension, QVariant* variant);
QVariant* QGraphicsEllipseItem_Extension(const QGraphicsEllipseItem* self, QVariant* variant);
QGraphicsPolygonItem* QGraphicsPolygonItem_new();
QGraphicsPolygonItem* QGraphicsPolygonItem_new2(QGraphicsItem* parent);
int QGraphicsPolygonItem_FillRule(const QGraphicsPolygonItem* self);
void QGraphicsPolygonItem_SetFillRule(QGraphicsPolygonItem* self, int rule);
QRectF* QGraphicsPolygonItem_BoundingRect(const QGraphicsPolygonItem* self);
QPainterPath* QGraphicsPolygonItem_Shape(const QGraphicsPolygonItem* self);
bool QGraphicsPolygonItem_Contains(const QGraphicsPolygonItem* self, QPointF* point);
void QGraphicsPolygonItem_Paint(QGraphicsPolygonItem* self, QPainter* painter, QStyleOptionGraphicsItem* option, QWidget* widget);
bool QGraphicsPolygonItem_IsObscuredBy(const QGraphicsPolygonItem* self, QGraphicsItem* item);
QPainterPath* QGraphicsPolygonItem_OpaqueArea(const QGraphicsPolygonItem* self);
int QGraphicsPolygonItem_Type(const QGraphicsPolygonItem* self);
bool QGraphicsPolygonItem_SupportsExtension(const QGraphicsPolygonItem* self, int extension);
void QGraphicsPolygonItem_SetExtension(QGraphicsPolygonItem* self, int extension, QVariant* variant);
QVariant* QGraphicsPolygonItem_Extension(const QGraphicsPolygonItem* self, QVariant* variant);
QGraphicsLineItem* QGraphicsLineItem_new();
QGraphicsLineItem* QGraphicsLineItem_new2(QLineF* line);
QGraphicsLineItem* QGraphicsLineItem_new3(double x1, double y1, double x2, double y2);
QGraphicsLineItem* QGraphicsLineItem_new4(QGraphicsItem* parent);
QGraphicsLineItem* QGraphicsLineItem_new5(QLineF* line, QGraphicsItem* parent);
QGraphicsLineItem* QGraphicsLineItem_new6(double x1, double y1, double x2, double y2, QGraphicsItem* parent);
QPen* QGraphicsLineItem_Pen(const QGraphicsLineItem* self);
void QGraphicsLineItem_SetPen(QGraphicsLineItem* self, QPen* pen);
QLineF* QGraphicsLineItem_Line(const QGraphicsLineItem* self);
void QGraphicsLineItem_SetLine(QGraphicsLineItem* self, QLineF* line);
void QGraphicsLineItem_SetLine2(QGraphicsLineItem* self, double x1, double y1, double x2, double y2);
QRectF* QGraphicsLineItem_BoundingRect(const QGraphicsLineItem* self);
QPainterPath* QGraphicsLineItem_Shape(const QGraphicsLineItem* self);
bool QGraphicsLineItem_Contains(const QGraphicsLineItem* self, QPointF* point);
void QGraphicsLineItem_Paint(QGraphicsLineItem* self, QPainter* painter, QStyleOptionGraphicsItem* option, QWidget* widget);
bool QGraphicsLineItem_IsObscuredBy(const QGraphicsLineItem* self, QGraphicsItem* item);
QPainterPath* QGraphicsLineItem_OpaqueArea(const QGraphicsLineItem* self);
int QGraphicsLineItem_Type(const QGraphicsLineItem* self);
bool QGraphicsLineItem_SupportsExtension(const QGraphicsLineItem* self, int extension);
void QGraphicsLineItem_SetExtension(QGraphicsLineItem* self, int extension, QVariant* variant);
QVariant* QGraphicsLineItem_Extension(const QGraphicsLineItem* self, QVariant* variant);
QGraphicsPixmapItem* QGraphicsPixmapItem_new();
QGraphicsPixmapItem* QGraphicsPixmapItem_new2(QPixmap* pixmap);
QGraphicsPixmapItem* QGraphicsPixmapItem_new3(QGraphicsItem* parent);
QGraphicsPixmapItem* QGraphicsPixmapItem_new4(QPixmap* pixmap, QGraphicsItem* parent);
QPixmap* QGraphicsPixmapItem_Pixmap(const QGraphicsPixmapItem* self);
void QGraphicsPixmapItem_SetPixmap(QGraphicsPixmapItem* self, QPixmap* pixmap);
int QGraphicsPixmapItem_TransformationMode(const QGraphicsPixmapItem* self);
void QGraphicsPixmapItem_SetTransformationMode(QGraphicsPixmapItem* self, int mode);
QPointF* QGraphicsPixmapItem_Offset(const QGraphicsPixmapItem* self);
void QGraphicsPixmapItem_SetOffset(QGraphicsPixmapItem* self, QPointF* offset);
void QGraphicsPixmapItem_SetOffset2(QGraphicsPixmapItem* self, double x, double y);
QRectF* QGraphicsPixmapItem_BoundingRect(const QGraphicsPixmapItem* self);
QPainterPath* QGraphicsPixmapItem_Shape(const QGraphicsPixmapItem* self);
bool QGraphicsPixmapItem_Contains(const QGraphicsPixmapItem* self, QPointF* point);
void QGraphicsPixmapItem_Paint(QGraphicsPixmapItem* self, QPainter* painter, QStyleOptionGraphicsItem* option, QWidget* widget);
bool QGraphicsPixmapItem_IsObscuredBy(const QGraphicsPixmapItem* self, QGraphicsItem* item);
QPainterPath* QGraphicsPixmapItem_OpaqueArea(const QGraphicsPixmapItem* self);
int QGraphicsPixmapItem_Type(const QGraphicsPixmapItem* self);
int QGraphicsPixmapItem_ShapeMode(const QGraphicsPixmapItem* self);
void QGraphicsPixmapItem_SetShapeMode(QGraphicsPixmapItem* self, int mode);
bool QGraphicsPixmapItem_SupportsExtension(const QGraphicsPixmapItem* self, int extension);
void QGraphicsPixmapItem_SetExtension(QGraphicsPixmapItem* self, int extension, QVariant* variant);
QVariant* QGraphicsPixmapItem_Extension(const QGraphicsPixmapItem* self, QVariant* variant);