src/libqgraphicsitem.bf

public struct QGraphicsEllipseItem
{
	[LinkName("QGraphicsEllipseItem_new")]
	public static extern void* QGraphicsEllipseItem_new();
	[LinkName("QGraphicsEllipseItem_new2")]
	public static extern void* QGraphicsEllipseItem_new2(QRectF rect);
	[LinkName("QGraphicsEllipseItem_new3")]
	public static extern void* QGraphicsEllipseItem_new3(double x, double y, double w, double h);
	[LinkName("QGraphicsEllipseItem_new4")]
	public static extern void* QGraphicsEllipseItem_new4(QGraphicsItem parent);
	[LinkName("QGraphicsEllipseItem_new5")]
	public static extern void* QGraphicsEllipseItem_new5(QRectF rect, QGraphicsItem parent);
	[LinkName("QGraphicsEllipseItem_new6")]
	public static extern void* QGraphicsEllipseItem_new6(double x, double y, double w, double h, QGraphicsItem parent);
	[LinkName("QGraphicsEllipseItem_Rect")]
	public static extern QRectF QGraphicsEllipseItem_Rect(void* c_this);
	[LinkName("QGraphicsEllipseItem_SetRect")]
	public static extern void QGraphicsEllipseItem_SetRect(void* c_this, QRectF rect);
	[LinkName("QGraphicsEllipseItem_SetRect2")]
	public static extern void QGraphicsEllipseItem_SetRect2(void* c_this, double x, double y, double w, double h);
	[LinkName("QGraphicsEllipseItem_StartAngle")]
	public static extern int32 QGraphicsEllipseItem_StartAngle(void* c_this);
	[LinkName("QGraphicsEllipseItem_SetStartAngle")]
	public static extern void QGraphicsEllipseItem_SetStartAngle(void* c_this, int32 angle);
	[LinkName("QGraphicsEllipseItem_SpanAngle")]
	public static extern int32 QGraphicsEllipseItem_SpanAngle(void* c_this);
	[LinkName("QGraphicsEllipseItem_SetSpanAngle")]
	public static extern void QGraphicsEllipseItem_SetSpanAngle(void* c_this, int32 angle);
	[LinkName("QGraphicsEllipseItem_BoundingRect")]
	public static extern QRectF QGraphicsEllipseItem_BoundingRect(void* c_this);
	[LinkName("QGraphicsEllipseItem_Shape")]
	public static extern QPainterPath QGraphicsEllipseItem_Shape(void* c_this);
	[LinkName("QGraphicsEllipseItem_Contains")]
	public static extern bool QGraphicsEllipseItem_Contains(void* c_this, QPointF point);
	[LinkName("QGraphicsEllipseItem_Paint")]
	public static extern void QGraphicsEllipseItem_Paint(void* c_this, QPainter painter, QStyleOptionGraphicsItem option, QWidget widget);
	[LinkName("QGraphicsEllipseItem_IsObscuredBy")]
	public static extern bool QGraphicsEllipseItem_IsObscuredBy(void* c_this, QGraphicsItem item);
	[LinkName("QGraphicsEllipseItem_OpaqueArea")]
	public static extern QPainterPath QGraphicsEllipseItem_OpaqueArea(void* c_this);
	[LinkName("QGraphicsEllipseItem_Type")]
	public static extern int32 QGraphicsEllipseItem_Type(void* c_this);
	[LinkName("QGraphicsEllipseItem_SupportsExtension")]
	public static extern bool QGraphicsEllipseItem_SupportsExtension(void* c_this, int64 _extension);
	[LinkName("QGraphicsEllipseItem_SetExtension")]
	public static extern void QGraphicsEllipseItem_SetExtension(void* c_this, int64 _extension, QVariant variant);
	[LinkName("QGraphicsEllipseItem_Extension")]
	public static extern QVariant QGraphicsEllipseItem_Extension(void* c_this, QVariant variant);
}
public struct QGraphicsPolygonItem
{
	[LinkName("QGraphicsPolygonItem_new")]
	public static extern void* QGraphicsPolygonItem_new();
	[LinkName("QGraphicsPolygonItem_new2")]
	public static extern void* QGraphicsPolygonItem_new2(QGraphicsItem parent);
	[LinkName("QGraphicsPolygonItem_FillRule")]
	public static extern int64 QGraphicsPolygonItem_FillRule(void* c_this);
	[LinkName("QGraphicsPolygonItem_SetFillRule")]
	public static extern void QGraphicsPolygonItem_SetFillRule(void* c_this, int64 rule);
	[LinkName("QGraphicsPolygonItem_BoundingRect")]
	public static extern QRectF QGraphicsPolygonItem_BoundingRect(void* c_this);
	[LinkName("QGraphicsPolygonItem_Shape")]
	public static extern QPainterPath QGraphicsPolygonItem_Shape(void* c_this);
	[LinkName("QGraphicsPolygonItem_Contains")]
	public static extern bool QGraphicsPolygonItem_Contains(void* c_this, QPointF point);
	[LinkName("QGraphicsPolygonItem_Paint")]
	public static extern void QGraphicsPolygonItem_Paint(void* c_this, QPainter painter, QStyleOptionGraphicsItem option, QWidget widget);
	[LinkName("QGraphicsPolygonItem_IsObscuredBy")]
	public static extern bool QGraphicsPolygonItem_IsObscuredBy(void* c_this, QGraphicsItem item);
	[LinkName("QGraphicsPolygonItem_OpaqueArea")]
	public static extern QPainterPath QGraphicsPolygonItem_OpaqueArea(void* c_this);
	[LinkName("QGraphicsPolygonItem_Type")]
	public static extern int32 QGraphicsPolygonItem_Type(void* c_this);
	[LinkName("QGraphicsPolygonItem_SupportsExtension")]
	public static extern bool QGraphicsPolygonItem_SupportsExtension(void* c_this, int64 _extension);
	[LinkName("QGraphicsPolygonItem_SetExtension")]
	public static extern void QGraphicsPolygonItem_SetExtension(void* c_this, int64 _extension, QVariant variant);
	[LinkName("QGraphicsPolygonItem_Extension")]
	public static extern QVariant QGraphicsPolygonItem_Extension(void* c_this, QVariant variant);
}
public struct QGraphicsLineItem
{
	[LinkName("QGraphicsLineItem_new")]
	public static extern void* QGraphicsLineItem_new();
	[LinkName("QGraphicsLineItem_new2")]
	public static extern void* QGraphicsLineItem_new2(QLineF line);
	[LinkName("QGraphicsLineItem_new3")]
	public static extern void* QGraphicsLineItem_new3(double x1, double y1, double x2, double y2);
	[LinkName("QGraphicsLineItem_new4")]
	public static extern void* QGraphicsLineItem_new4(QGraphicsItem parent);
	[LinkName("QGraphicsLineItem_new5")]
	public static extern void* QGraphicsLineItem_new5(QLineF line, QGraphicsItem parent);
	[LinkName("QGraphicsLineItem_new6")]
	public static extern void* QGraphicsLineItem_new6(double x1, double y1, double x2, double y2, QGraphicsItem parent);
	[LinkName("QGraphicsLineItem_Pen")]
	public static extern QPen QGraphicsLineItem_Pen(void* c_this);
	[LinkName("QGraphicsLineItem_SetPen")]
	public static extern void QGraphicsLineItem_SetPen(void* c_this, QPen pen);
	[LinkName("QGraphicsLineItem_Line")]
	public static extern QLineF QGraphicsLineItem_Line(void* c_this);
	[LinkName("QGraphicsLineItem_SetLine")]
	public static extern void QGraphicsLineItem_SetLine(void* c_this, QLineF line);
	[LinkName("QGraphicsLineItem_SetLine2")]
	public static extern void QGraphicsLineItem_SetLine2(void* c_this, double x1, double y1, double x2, double y2);
	[LinkName("QGraphicsLineItem_BoundingRect")]
	public static extern QRectF QGraphicsLineItem_BoundingRect(void* c_this);
	[LinkName("QGraphicsLineItem_Shape")]
	public static extern QPainterPath QGraphicsLineItem_Shape(void* c_this);
	[LinkName("QGraphicsLineItem_Contains")]
	public static extern bool QGraphicsLineItem_Contains(void* c_this, QPointF point);
	[LinkName("QGraphicsLineItem_Paint")]
	public static extern void QGraphicsLineItem_Paint(void* c_this, QPainter painter, QStyleOptionGraphicsItem option, QWidget widget);
	[LinkName("QGraphicsLineItem_IsObscuredBy")]
	public static extern bool QGraphicsLineItem_IsObscuredBy(void* c_this, QGraphicsItem item);
	[LinkName("QGraphicsLineItem_OpaqueArea")]
	public static extern QPainterPath QGraphicsLineItem_OpaqueArea(void* c_this);
	[LinkName("QGraphicsLineItem_Type")]
	public static extern int32 QGraphicsLineItem_Type(void* c_this);
	[LinkName("QGraphicsLineItem_SupportsExtension")]
	public static extern bool QGraphicsLineItem_SupportsExtension(void* c_this, int64 _extension);
	[LinkName("QGraphicsLineItem_SetExtension")]
	public static extern void QGraphicsLineItem_SetExtension(void* c_this, int64 _extension, QVariant variant);
	[LinkName("QGraphicsLineItem_Extension")]
	public static extern QVariant QGraphicsLineItem_Extension(void* c_this, QVariant variant);
}
public struct QGraphicsPixmapItem
{
	[LinkName("QGraphicsPixmapItem_new")]
	public static extern void* QGraphicsPixmapItem_new();
	[LinkName("QGraphicsPixmapItem_new2")]
	public static extern void* QGraphicsPixmapItem_new2(QPixmap pixmap);
	[LinkName("QGraphicsPixmapItem_new3")]
	public static extern void* QGraphicsPixmapItem_new3(QGraphicsItem parent);
	[LinkName("QGraphicsPixmapItem_new4")]
	public static extern void* QGraphicsPixmapItem_new4(QPixmap pixmap, QGraphicsItem parent);
	[LinkName("QGraphicsPixmapItem_Pixmap")]
	public static extern QPixmap QGraphicsPixmapItem_Pixmap(void* c_this);
	[LinkName("QGraphicsPixmapItem_SetPixmap")]
	public static extern void QGraphicsPixmapItem_SetPixmap(void* c_this, QPixmap pixmap);
	[LinkName("QGraphicsPixmapItem_TransformationMode")]
	public static extern int64 QGraphicsPixmapItem_TransformationMode(void* c_this);
	[LinkName("QGraphicsPixmapItem_SetTransformationMode")]
	public static extern void QGraphicsPixmapItem_SetTransformationMode(void* c_this, int64 mode);
	[LinkName("QGraphicsPixmapItem_Offset")]
	public static extern QPointF QGraphicsPixmapItem_Offset(void* c_this);
	[LinkName("QGraphicsPixmapItem_SetOffset")]
	public static extern void QGraphicsPixmapItem_SetOffset(void* c_this, QPointF offset);
	[LinkName("QGraphicsPixmapItem_SetOffset2")]
	public static extern void QGraphicsPixmapItem_SetOffset2(void* c_this, double x, double y);
	[LinkName("QGraphicsPixmapItem_BoundingRect")]
	public static extern QRectF QGraphicsPixmapItem_BoundingRect(void* c_this);
	[LinkName("QGraphicsPixmapItem_Shape")]
	public static extern QPainterPath QGraphicsPixmapItem_Shape(void* c_this);
	[LinkName("QGraphicsPixmapItem_Contains")]
	public static extern bool QGraphicsPixmapItem_Contains(void* c_this, QPointF point);
	[LinkName("QGraphicsPixmapItem_Paint")]
	public static extern void QGraphicsPixmapItem_Paint(void* c_this, QPainter painter, QStyleOptionGraphicsItem option, QWidget widget);
	[LinkName("QGraphicsPixmapItem_IsObscuredBy")]
	public static extern bool QGraphicsPixmapItem_IsObscuredBy(void* c_this, QGraphicsItem item);
	[LinkName("QGraphicsPixmapItem_OpaqueArea")]
	public static extern QPainterPath QGraphicsPixmapItem_OpaqueArea(void* c_this);
	[LinkName("QGraphicsPixmapItem_Type")]
	public static extern int32 QGraphicsPixmapItem_Type(void* c_this);
	[LinkName("QGraphicsPixmapItem_ShapeMode")]
	public static extern int64 QGraphicsPixmapItem_ShapeMode(void* c_this);
	[LinkName("QGraphicsPixmapItem_SetShapeMode")]
	public static extern void QGraphicsPixmapItem_SetShapeMode(void* c_this, int64 mode);
	[LinkName("QGraphicsPixmapItem_SupportsExtension")]
	public static extern bool QGraphicsPixmapItem_SupportsExtension(void* c_this, int64 _extension);
	[LinkName("QGraphicsPixmapItem_SetExtension")]
	public static extern void QGraphicsPixmapItem_SetExtension(void* c_this, int64 _extension, QVariant variant);
	[LinkName("QGraphicsPixmapItem_Extension")]
	public static extern QVariant QGraphicsPixmapItem_Extension(void* c_this, QVariant variant);
}
